# BUT3_2026_SAES6_ALVS_BACK_G2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py  routes.py
app/controllers/: __init__.py  user_controller.py
app/models/: __init__.py  poll.py  user.py
app/repositories/: __init__.py  user_repository.py
app/routes/: __init__.py  auth.py  polls.py  user.py  user_routes.py  users.py
app/services/: __init__.py  poll_service.py  user_service.py
app/utils/: auth.py  response.py  validators.py
controllers/: colli_controller.py  user_controller.py
docker/api/: Dockerfile
dtos/: colli_dto.py  colli_member_dto.py  comment_dto.py  letter_dto.py  user_dto.py
migrations/: env.py
models/: colli_member_model.py  colli_model.py  comment_model.py  letter_model.py  user.py  user_model.py
repositories/: colli_member_repository.py  colli_repository.py  comment_repository.py  letter_repository.py  user_repository.py
scripts/: create_admin.py  seed_and_serve.py  seed_demo.py
services/: colli_member_service.py  colli_service.py  comment_service.py  file_service.py  letter_service.py  user_service.py
shared/: database.py  socketio.py
sockets/: colli_events.py
src/application/dtos/: colli_dto.py  comment_dto.py  letter_dto.py  user_dto.py
src/application/exceptions/: __init__.py
src/application/interfaces/: event_publisher.py
src/domain/notification/: __init__.py
src/infrastructure/: container.py
src/shared/: domain_exception.py
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_auth_routes.py  test_models.py  test_polls.py  test_routes.py  test_services.py  test_user_controller.py  test_user_model.py  test_user_service.py  test_users.py
tests/integration/: test_admin_routes.py  test_auth_routes.py  test_colli_routes.py  test_comment_routes.py  test_export_routes.py  test_invitation_routes.py  test_letter_routes.py  test_notification_routes.py  test_password_reset_routes.py  test_report_routes.py  test_search_routes.py
tests/unit/: test_email_service.py  test_notification_service.py
(+112 files in other folders)
