[project]
name = "alvs-backend"
version = "1.0.0"
description = "ALVS - Aventure Littéraire Vers le Sud - Backend API"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

# Règles activées
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

# Règles ignorées
ignore = [
    "E501",   # Line too long (géré par formatter)
    "B008",   # Function call in default argument (utile pour Flask)
]

# Exclusions
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "*.egg-info",
]

[tool.ruff.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
